FEAT: Add 'coming soon' section to index.html

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -32,4 +32,14 @@
             </p>
         </div>
     </div>
+    <div class="content-container">
+        <div class="inner-content-container">
+            <h2 class="content-header">Coming Soon</h2>
+            <p class="text-content">
+                Revisit soon when you’ll have the opportunity to sponsor a cubic meter of blanket bog. Blanket bog is currently being cut and used as fuel. By sponsoring the purchase of blanket bog you are contributing to the reflooding and restoration of the bog. 
+
+                A cubic meter of blanket bog can release up to 385kg of CO2! By paying to preserve bog that would otherwise release carbon you could offset your life’s carbon by sponsoring just 37 meters squared of 2 meter deep blanket bog for €100!                
+            </p>
+        </div>
+    </div>
 {% endblock%}
