--- a/templates/base.html
+++ b/templates/base.html
@@ -55,6 +55,25 @@
             <!-- End of bootstrap navigation -->
         </header>
         <div class="main-container {% block main_style %}{% endblock %}">
+                <!-- Message HTML provided by Code Institute -->
+                {% if messages %}
+                    <div class="message-container">
+                        {% for message in messages %}
+                            {% with message.level as level %}
+                                {% if level == 40 %}
+                                    {% include 'includes/toasts/toast_error.html' %}
+                                {% elif level == 30 %}
+                                    {% include 'includes/toasts/toast_warning.html' %}
+                                {% elif level == 25 %}
+                                    {% include 'includes/toasts/toast_success.html' %}
+                                {% else %}
+                                    {% include 'includes/toasts/toast_info.html' %}
+                                {% endif %}
+                            {% endwith %}
+                        {% endfor %}
+                    </div>
+                {% endif %}
+                <!-- End of Message HTML provided by Code Institute -->
             <main>
                 {% block content %}
                 {% endblock %}
@@ -113,6 +132,7 @@
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+        <script src="{% static 'js/libraries/jquery_3_7_0.js' %}"></script>        
         <script src="{% static 'js/wild_carbon_base.js' %}"></script>
     </body>
 </html>
