--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -5,42 +5,43 @@
 
 {% block title %}Wild Carbon Sign In{% endblock title %}
 
-  {% block content %}
+{% block main_style %}main-container-offset{% endblock %}
+{% block content %}
 
-    <h2>{% trans "Sign In" %}</h2>
+  <h2>{% trans "Sign In" %}</h2>
 
-    {% get_providers as socialaccount_providers %}
+  {% get_providers as socialaccount_providers %}
 
-    {% if socialaccount_providers %}
-      <p>{% blocktrans with site.name as site_name %}Please sign in with one
-         of your existing third party accounts. Or, <a href="{{ signup_url }}" class="standard-link">sign up</a>
-         for a {{ site_name }} account and sign in below:{% endblocktrans %}
-      </p>
+  {% if socialaccount_providers %}
+    <p>{% blocktrans with site.name as site_name %}Please sign in with one
+        of your existing third party accounts. Or, <a href="{{ signup_url }}" class="standard-link">sign up</a>
+        for a {{ site_name }} account and sign in below:{% endblocktrans %}
+    </p>
 
-    <div class="socialaccount_ballot">
+  <div class="socialaccount_ballot">
 
-      <ul class="socialaccount_providers">
-        {% include "socialaccount/snippets/provider_list.html" with process="login" %}
-      </ul>
+    <ul class="socialaccount_providers">
+      {% include "socialaccount/snippets/provider_list.html" with process="login" %}
+    </ul>
 
-      <div class="login-or">{% trans 'or' %}</div>
+    <div class="login-or">{% trans 'or' %}</div>
 
-    </div>
+  </div>
 
-    {% include "socialaccount/snippets/login_extra.html" %}
+  {% include "socialaccount/snippets/login_extra.html" %}
 
-    {% else %}
-      <p>{% blocktrans %}If you have not created an account yet, then please
-         <a href="{{ signup_url }}" class="standard-link  anchor-style">sign up</a> first.{% endblocktrans %}
-      </p>
+  {% else %}
+    <p>{% blocktrans %}If you have not created an account yet, then please
+        <a href="{{ signup_url }}" class="standard-link  anchor-style">sign up</a> first.{% endblocktrans %}
+    </p>
+  {% endif %}
+
+  <form class="login" method="POST" action="{% url 'account_login' %}">
+    {% csrf_token %}
+    {{ form | crispy }}
+    {% if redirect_field_value %}
+    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
     {% endif %}
-
-    <form class="login" method="POST" action="{% url 'account_login' %}">
-      {% csrf_token %}
-      {{ form | crispy }}
-      {% if redirect_field_value %}
-      <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-      {% endif %}
-      <button class="primaryAction button" type="submit">{% trans "Sign In" %}</button>
-    </form>
+    <button class="primaryAction button" type="submit">{% trans "Sign In" %}</button>
+  </form>
 {% endblock %}
