--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block extra_title %}
+{% block head_title %}
     Rewild your way to carbon neutrality and beyond
 {% endblock %}
 
