--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -1,11 +1,10 @@
-{% extends "base.html" %}
+{% extends "account/base.html" %}
 {% load crispy_forms_tags %}
 {% load i18n %}
 {% load account socialaccount %}
 
-{% block title %}Wild Carbon Sign In{% endblock title %}
+{% block head_title %}Wild Carbon Sign In{% endblock %}
 
-{% block main_style %}main-container-offset{% endblock %}
 {% block content %}
 
   <h2>{% trans "Sign In" %}</h2>
