--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Wild Carbon: {% block extra_title %}{% endblock %}</title>
+        <title>Wild Carbon: {% block head_title %}{% endblock %}</title>
         {% block description %}
         {% endblock description %}
         <meta name="keywords" content="carbon sequestration, co2, rewilding, re-wilding, carbon footprint">
