FEAT: Add account menu to base.html

--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -43,4 +43,6 @@
     {% endif %}
     <button class="primaryAction button" type="submit">{% trans "Sign In" %}</button>
   </form>
+    <a href="{% url 'account_reset_password' %}" class="standard-link  anchor-style">Forgotten password?</a>
+
 {% endblock %}
