--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -12,4 +12,5 @@
         {{ form.as_p }}
         <button type="submit" name="action">{% trans "Change Password" %}</button>
     </form>
+    <a href="{% url 'account_login' %}" class="standard-link  anchor-style">Sign In</a>
 {% endblock %}
