--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -21,4 +21,5 @@
     </form>
 
     <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+    <a href="{% url 'account_login' %}" class="standard-link  anchor-style">Back</a>
 {% endblock %}
