--- a/templates/allauth/account/password_reset_from_key.html
+++ b/templates/allauth/account/password_reset_from_key.html
@@ -16,6 +16,7 @@
                 {{ form.as_p }}
                 <input type="submit" name="action" value="{% trans 'change password' %}"/>
             </form>
+            <a href="{% url 'account_login' %}" class="standard-link  anchor-style">Sign In</a>
         {% else %}
             <p>{% trans 'Your password is now changed.' %}</p>
         {% endif %}
