--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -6,4 +6,5 @@
 {% block content %}
     <h1>{% trans "Change Password" %}</h1>
     <p>{% trans 'Your password is now changed.' %}</p>
+    <a href="{% url 'account_login' %}" class="standard-link  anchor-style">Sign In</a>
 {% endblock %}
