--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,33 @@
                             <div class="logo-tagline">Rewild your way to carbon neutrality</div>
                         </a>
                     </div>
-                    <div class="header-nav-right">Placeholder</div>
+                    <div class="header-nav-right">
+                        <div class="dropdown-center">
+                            <button class="dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <!-- Icon supplied by font awesome https://fontawesome.com/  -->
+                                <img class="account-menu-icon" src="{% static 'static_media/icons/base-account-menu.svg' %}" alt="Open the account menu">
+                            </button>
+                            <ul class="dropdown-menu dropdown-menu-end">
+                                {% if user.is_authenticated %}
+                                    <li>
+                                        <a class="dropdown-item" href="{% url 'account_logout' %}">Logout</a>
+                                    </li>
+                                {% else %}
+                                    <li>
+                                        <a class="dropdown-item" href="{% url 'account_signup' %}">Register</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="{% url 'account_login' %}">Login</a>
+                                    </li>
+                                {% endif %}
+                                {% if user.is_staff %}
+                                    <li>
+                                        <a class="dropdown-item" href="{% url 'admin:index' %}">Admin</a>
+                                    </li>
+                                {% endif %}
+                            </ul>
+                        </div>
+                    </div>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
@@ -83,7 +109,7 @@
                     <div class="footer-left">
                         <div class="footer-left-back-to-top" id="footer-left-back-to-top">
                             <!-- Icon supplied by font awesome https://fontawesome.com/  -->
-                            <img class="back-to-top-button" id="back-to-top-button" role="button" src="{% static 'static_media/icons/base-circle-up-solid.svg' %}" alt="Back to top up arrow button">
+                            <img class="back-to-top-button" id="back-to-top-button" role="button" src="{% static 'static_media/icons/base-circle-up.svg' %}" alt="Back to top up arrow button">
                         </div>
                     </div>
                     <div class="footer-middle">
