--- a/templates/base.html
+++ b/templates/base.html
@@ -159,7 +159,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
         <script src="{% static 'js/libraries/jquery_3_7_0.js' %}"></script>        
-        <script src="{% static 'js/wild_carbon_base.js' %}"></script>
+        <script src="{% static 'js/wild_carbon/base.js' %}"></script>
         {% block extra_js %}
         {% endblock %}
     </body>
