--- a/plants/templates/plants/plant_list.html
+++ b/plants/templates/plants/plant_list.html
@@ -33,4 +33,17 @@
         </select>
     </div>
     <!-- End of search box and sort box HTML supplied by Code Institute -->
+    {% for plant in plants %}
+        {% if plant.image %}
+            <img src="{{ plant.image.url }}" alt="{{ plant.common_name }}">
+        {% else %}
+            <img src="{{ MEDIA_URL }}noimage.png" alt="{{ plant.common_name }}">
+        {% endif %}
+        <div>{{ plant.common_name }}</div>
+        <span>{{ plant.genus }}</span>
+        <span>{{ plant.species }}</span>
+        <div>{{ plant.price }}</div>
+        <div>{{ plant.sku }}</div>
+        <a href="{% url 'edit_plant' plant.id %}">Edit</a>
+    {% endfor %}
 {% endblock%}
