--- a/plants/templates/plants/edit_plant.html
+++ b/plants/templates/plants/edit_plant.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block head_title %}
-    Add a plant
+    Edit a plant
 {% endblock %}
 
 {% block main_style %}main-container-offset{% endblock %}
@@ -11,7 +11,7 @@
     <div class="row">
         <div class="col-12 col-md-6">
             <div class="note">Note: leading, trailing and multiple spaces in a row in the common name are removed</div>
-            <form method="POST" action="{% url 'add_plant' %}" class="form mb-2" enctype="multipart/form-data">
+            <form method="POST" action="{% url 'edit_plant' plant.id %}" class="form mb-2" enctype="multipart/form-data">
                 {% csrf_token %}
                 {% for field in form %}
                     {% if field.name != 'image' %}
@@ -22,7 +22,7 @@
                 {% endfor %}
                 <div class="text-right">
                     <a class="btn btn-outline-black rounded-0" href="{% url 'plant_list' %}">Back</a>
-                    <button id="plant-submit-btn" class="btn btn-black rounded-0" type="submit">Add</button>
+                    <button id="plant-submit-btn" class="btn btn-black rounded-0" type="submit">Save Plant</button>
                 </div>
             </form>
         </div>            
@@ -30,5 +30,5 @@
 {% endblock %}
 
 {% block extra_js %}
-    <script src="{% static 'js/plants/add_plant.js' %}"></script>
+    <script src="{% static 'js/plants/add_edit_plant.js' %}"></script>
 {% endblock %}
