--- a/templates/base.html
+++ b/templates/base.html
@@ -68,9 +68,11 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'home' %}">Home</a>
                             </li>
+                            {% if user.is_superuser %}
                             <li class="nav-item">
-                                <a class="nav-link" href="#">First link</a>
+                                <a class="nav-link" href="{% url 'plant_list' %}">Plan Admin</a>
                             </li>
+                            {% endif %}
                             <li class="nav-item">
                                 <a class="nav-link" href="#">First link</a>
                             </li>
