--- a/plants/templates/plants/confirm_plant_delete.html
+++ b/plants/templates/plants/confirm_plant_delete.html
@@ -16,7 +16,7 @@
             {{ form }}
             <div class="button-container">
                 <button type="submit">Delete Plant</button>
-                <a href="{% url 'plant_list' %}">No Thanks</a>
+                <a href="{% url 'list_plants' %}">No Thanks</a>
             </div>
         </form>
     </div>
