--- a/templates/base.html
+++ b/templates/base.html
@@ -70,7 +70,7 @@
                             </li>
                             {% if user.is_superuser %}
                             <li class="nav-item">
-                                <a class="nav-link" href="{% url 'plant_list' %}">Plan Admin</a>
+                                <a class="nav-link" href="{% url 'list_plants' %}">Plan Admin</a>
                             </li>
                             {% endif %}
                             <li class="nav-item">
