--- a/plants/templates/plants/edit_plant.html
+++ b/plants/templates/plants/edit_plant.html
@@ -21,7 +21,7 @@
                     {% endif %}
                 {% endfor %}
                 <div class="text-right">
-                    <a class="btn btn-outline-black rounded-0" href="{% url 'plant_list' %}">Back</a>
+                    <a class="btn btn-outline-black rounded-0" href="{% url 'list_plants' %}">Back</a>
                     <button id="plant-submit-btn" class="btn btn-black rounded-0" type="submit">Save Plant</button>
                 </div>
             </form>
