--- a/templates/base.html
+++ b/templates/base.html
@@ -70,7 +70,7 @@
                             {% endif %}
                             {% if user.is_staff %}
                                 <li>
-                                    <a class="dropdown-item" href="{% url 'admin:index' %}">Admin</a>
+                                    <a class="nav-link" href="{% url 'admin:index' %}">Admin</a>
                                 </li>
                             {% endif %}
                             <li class="nav-item">
