--- a/plants/templates/plants/list_plants.html
+++ b/plants/templates/plants/list_plants.html
@@ -26,10 +26,10 @@
     <div class="sort-select-wrapper w-50">
         <select id="sort-selector" class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
             <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...</option>
-            <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price (low to high)</option>
-            <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>Price (high to low)</option>
-            <option value="name_asc" {% if current_sorting == 'name_asc' %}selected{% endif %}>Name (A-Z)</option>
-            <option value="name_desc" {% if current_sorting == 'name_desc' %}selected{% endif %}>Name (Z-A)</option>
+            <option value="price__asc" {% if current_sorting == 'price__asc' %}selected{% endif %}>Price (low to high)</option>
+            <option value="price__desc" {% if current_sorting == 'price__desc' %}selected{% endif %}>Price (high to low)</option>
+            <option value="common_name__asc" {% if current_sorting == 'common_name__asc' %}selected{% endif %}>Name (A-Z)</option>
+            <option value="common_name__desc" {% if current_sorting == 'common_name__desc' %}selected{% endif %}>Name (Z-A)</option>
         </select>
     </div>
     <!-- End of search box and sort box HTML supplied by Code Institute -->
@@ -49,3 +49,7 @@
         <hr>
     {% endfor %}
 {% endblock%}
+
+{% block extra_js %}
+    <script src="{% static 'js/wild_carbon/search_sort.js' %}"></script>
+{% endblock %}
