--- a/plants/templates/plants/edit_plant.html
+++ b/plants/templates/plants/edit_plant.html
@@ -8,6 +8,7 @@
 {% block main_style %}main-container-offset{% endblock %}
 
 {% block content %}
+    <h1>Update Plant</h1>
     <div class="row">
         <div class="col-12 col-md-6">
             <div class="note">Note: leading, trailing and multiple spaces in a row in the common name are removed</div>
