--- a/plants/templates/plants/list_plants.html
+++ b/plants/templates/plants/list_plants.html
@@ -45,7 +45,7 @@
                     <div>{{ plant.common_name }}</div>
                     <span>{{ plant.genus }}</span>
                     <span>{{ plant.species }}</span>
-                    <div>{{ plant.price }}</div>
+                    <div>&#8364 {{ plant.price }}</div>
                     <div>{{ plant.sku }}</div>
                     <div>
                         <a href="{% url 'edit_plant' plant.id %}">Edit</a> |
