--- a/locations/templates/locations/location_plants_link.html
+++ b/locations/templates/locations/location_plants_link.html
@@ -8,7 +8,7 @@
 {% block main_style %}main-container-offset{% endblock %}
 
 {% block content %}
-<h2>Location Plants</h2>
+<h2>Plant Availability</h2>
 <div>
     <form method="post">
         {{ form | crispy }}
