FEAT: Add depage scriptions to templates

--- a/locations/templates/locations/location_plants_link.html
+++ b/locations/templates/locations/location_plants_link.html
@@ -7,6 +7,10 @@
 
 {% block main_style %}main-container-offset{% endblock %}
 
+{% block description %}
+    <meta name="description" content="On this page you can make plants available for our Wild Carbon location">
+{% endblock %}
+
 {% block content %}
 <h2>Plant Availability</h2>
 <div>
