--- a/plants/templates/plants/add_plant.html
+++ b/plants/templates/plants/add_plant.html
@@ -7,6 +7,10 @@
 
 {% block main_style %}main-container-offset{% endblock %}
 
+{% block description %}
+    <meta name="description" content="On this page you can add a plant to the Wild Carbon system">
+{% endblock %}
+
 {% block content %}
     <div class="row">
         <div class="col-12 col-md-6">
