--- a/plants/templates/plants/edit_plant.html
+++ b/plants/templates/plants/edit_plant.html
@@ -7,6 +7,10 @@
 
 {% block main_style %}main-container-offset{% endblock %}
 
+{% block description %}
+    <meta name="description" content="On this page you can edit a plant on the Wild Carbon system">
+{% endblock %}
+
 {% block content %}
     <h1>Update Plant</h1>
     <div class="row">
