--- a/plants/templates/plants/confirm_plant_delete.html
+++ b/plants/templates/plants/confirm_plant_delete.html
@@ -7,6 +7,10 @@
 
 {% block main_style %}main-container-offset{% endblock %}
 
+{% block description %}
+    <meta name="description" content="On this page you can confirm deletion of a plant from the Wild Carbon system">
+{% endblock %}
+
 {% block content %}
     <h2 class="general-header">Confirm plant deletion</h2>
     <div>
