--- a/templates/base.html
+++ b/templates/base.html
@@ -62,6 +62,9 @@
                         <ul class="navbar-nav">
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'home' %}">Home</a>
+                            </li>                            
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Carbon Capture</a>
                             </li>
                             {% if user.is_superuser %}
                                 <li class="nav-item">
