FEAT: Make image names conventional

--- a/locations/templates/locations/carbon_capture.html
+++ b/locations/templates/locations/carbon_capture.html
@@ -12,7 +12,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="page-title-container">
+    <div class="page-title-container carbon-capture-title-container">
         <div class="page-title">
             <h1 class="page-title-main">Wild Carbon</h1>
             <h2 class="page-title-secondary">Rewild your way to carbon neutrality</h2>
