--- a/static/css/style.css
+++ b/static/css/style.css
@@ -202,11 +202,15 @@ main {
 
 .page-title-container {
     /* Image sourced at https: //www.pexels.com/photo/green-forest-under-white-sky-during-daytime-165537/ */
-    background: url("/static/static_media/images/base-home-index-glade.jpg") no-repeat center center/cover;
+    background: url("/static/static_media/images/carbon_capture_location.jpg") no-repeat center center/cover;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.carbon-capture-title-container {
+    background: url("/static/static_media/images/base_home_index_glade.jpg") no-repeat center center/cover;
 }
 
 .page-title {
@@ -376,7 +380,7 @@ main {
     height: 100vh;
     width: 100vw;
     /* Image sourced at https: //www.pexels.com/photo/green-forest-under-white-sky-during-daytime-165537/ */
-    background: url("/static/static_media/images/base-home-index-glade.jpg") no-repeat center center/cover;
+    background: url("/static/static_media/images/base_home_index_glade.jpg") no-repeat center center/cover;
     z-index: 2;
     top: 0;
     left: 0;
