FEAT: Add carbon capture template,view,url and nav link

--- a/templates/base.html
+++ b/templates/base.html
@@ -64,7 +64,7 @@
                                 <a class="nav-link" href="{% url 'home' %}">Home</a>
                             </li>                            
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Carbon Capture</a>
+                                <a class="nav-link" href="{% url 'carbon_capture' %}">Carbon Capture</a>
                             </li>
                             {% if user.is_superuser %}
                                 <li class="nav-item">
