--- a/locations/templates/locations/carbon_capture.html
+++ b/locations/templates/locations/carbon_capture.html
@@ -14,32 +14,69 @@
 {% block content %}
     <div class="page-title-container carbon-capture-title-container">
         <div class="page-title">
-            <h1 class="page-title-main">Wild Carbon</h1>
-            <h2 class="page-title-secondary">Rewild your way to carbon neutrality</h2>
+            <h1 class="page-title-main">Carbon Capture</h1>
+            <h2 class="page-title-secondary">Commission the growing and planting of trees at our location in the west of Ireland</h2>
             <!-- Image supplied by font awesome https://fontawesome.com/  -->
             <img class="page-title-image" src="{% static 'static_media/images/home-index-seedling.svg' %}" alt="A seedling">
         </div>
     </div>
     <div class="content-container">
         <div class="inner-content-container">
-            <h2 class="content-header">What we do</h2>
-            <p class="text-content">
-                ‘Wild Carbon’ is a company that can enable you to rewild your way to a carbon neutral or even carbon negative life! 
+            <h2 class="content-header">Our Location</h2>
+            <p class="text-content location-text">
+                Located in the west of Ireland, our 80 acre site has the capacity for approximately 50000 trees! You choose the trees you want planted in you name and we will make sure it happens as soon as possible. 
 
-                We provide you with the opportunity to commission the growth and planting of trees of your choosing at our location in the west of Ireland.
-    
-                On placing your order with us, we begin the process of growing your selected trees. Once of the required maturity, these trees are then planted out onto our protected site and allowed to grow indefinitely, gradually sequestering carbon for you.
+                The trees suitable for this site are listed below. 
+                
+                We hope you enjoy browsing the collection.
             </p>
         </div>
     </div>
-    <div class="content-container">
-        <div class="inner-content-container">
-            <h2 class="content-header">Coming Soon</h2>
-            <p class="text-content">
-                Revisit soon when you’ll have the opportunity to sponsor a cubic meter of blanket bog. Blanket bog is currently being cut and used as fuel. By sponsoring the purchase of blanket bog you are contributing to the reflooding and restoration of the bog. 
-
-                A cubic meter of blanket bog can release up to 385kg of CO2! By paying to preserve bog that would otherwise release carbon you could offset your life’s carbon by sponsoring just 37 meters squared of 2 meter deep blanket bog for €100!                
-            </p>
-        </div>
+    <!-- Search box and sort box HTML supplied by Code Institute -->
+    <div>
+        <form method="GET" action="{% url 'list_plants' %}">
+            <div class="input-group w-50">
+                <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
+                <div class="input-group-append">
+                    <button class="form-control btn btn-black border border-black rounded-0" type="submit">
+                        <span class="icon">
+                            <i class="fas fa-search"></i>
+                        </span>
+                    </button>
+                </div>
+            </div>
+        </form>
     </div>
+    <div class="sort-select-wrapper w-50">
+        <select id="sort-selector" class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
+            <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...</option>
+            <option value="price__asc" {% if current_sorting == 'price__asc' %}selected{% endif %}>Price (low to high)</option>
+            <option value="price__desc" {% if current_sorting == 'price__desc' %}selected{% endif %}>Price (high to low)</option>
+            <option value="common_name__asc" {% if current_sorting == 'common_name__asc' %}selected{% endif %}>Name (A-Z)</option>
+            <option value="common_name__desc" {% if current_sorting == 'common_name__desc' %}selected{% endif %}>Name (Z-A)</option>
+        </select>
+    </div>
+    <!-- End of search box and sort box HTML supplied by Code Institute -->
+    <div class="plant-list-container">
+        <div class="plant-list">
+            {% for plant in plants %}
+                <div class="plant-instance">
+                    {% if plant.image %}
+                        <img class="plant-image" src="{{ plant.image.url }}" alt="{{ plant.common_name }}">
+                    {% else %}
+                        <img class="plant-image" src="{{ MEDIA_URL }}noimage.png" alt="{{ plant.common_name }}">
+                    {% endif %}
+                    <div>{{ plant.common_name }}</div>
+                    <span>{{ plant.genus }}</span>
+                    <span>{{ plant.species }}</span>
+                    <div>&#8364 {{ plant.price }}</div>
+                    <div>{{ plant.sku }}</div>
+                    <div>
+                        <a href="{% url 'edit_plant' plant.id %}">Edit</a> |
+                        <a href="{% url 'delete_plant' plant.id %}">Delete</a>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    </div>    
 {% endblock%}
