--- a/static/css/style.css
+++ b/static/css/style.css
@@ -202,7 +202,7 @@ main {
 
 .page-title-container {
     /* Image sourced at https: //www.pexels.com/photo/green-forest-under-white-sky-during-daytime-165537/ */
-    background: url("/static/static_media/images/carbon_capture_location.jpg") no-repeat center center/cover;
+    background: url("/static/static_media/images/base_home_index_glade.jpg") no-repeat center center/cover;
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -210,7 +210,8 @@ main {
 }
 
 .carbon-capture-title-container {
-    background: url("/static/static_media/images/base_home_index_glade.jpg") no-repeat center center/cover;
+    /* Image sourced at https://iowalandcompany.com/jones-county-iowa-80-acres-for-sale/ */
+    background: url("/static/static_media/images/carbon_capture_location.jpg") no-repeat center center/cover;
 }
 
 .page-title {
@@ -261,6 +262,10 @@ main {
 
 .text-content {
     white-space: pre-line;
+}
+
+.location-text {
+    text-align: center;
 }
 
 /* Footer styles */
