--- a/plants/templates/plants/confirm_plant_delete.html
+++ b/plants/templates/plants/confirm_plant_delete.html
@@ -25,3 +25,6 @@
         </form>
     </div>
 {% endblock content %}
+
+{% block modal_style %}modal-offset{% endblock %}
+{% block privacy_modal_style %}modal-offset{% endblock %}
