--- a/plants/templates/plants/edit_plant.html
+++ b/plants/templates/plants/edit_plant.html
@@ -34,6 +34,9 @@
     </div>
 {% endblock %}
 
+{% block modal_style %}modal-offset{% endblock %}
+{% block privacy_modal_style %}modal-offset{% endblock %}
+
 {% block extra_js %}
     <script src="{% static 'js/plants/add_edit_plant.js' %}"></script>
 {% endblock %}
