--- a/plants/templates/plants/list_plants.html
+++ b/plants/templates/plants/list_plants.html
@@ -62,6 +62,9 @@
     </div>
 {% endblock%}
 
+{% block modal_style %}modal-offset{% endblock %}
+{% block privacy_modal_style %}modal-offset{% endblock %}
+
 {% block extra_js %}
     <script src="{% static 'js/wild_carbon/search_sort.js' %}"></script>
 {% endblock %}
