--- a/locations/templates/locations/location_plants_link.html
+++ b/locations/templates/locations/location_plants_link.html
@@ -24,3 +24,6 @@
     </form>
 </div>
 {% endblock content %}
+
+{% block modal_style %}modal-offset{% endblock %}
+{% block privacy_modal_style %}modal-offset{% endblock %}
