FEAT: Update carbon capture template, view and url

--- a/locations/templates/locations/carbon_capture.html
+++ b/locations/templates/locations/carbon_capture.html
@@ -34,7 +34,7 @@
     </div>
     <!-- Search box and sort box HTML supplied by Code Institute -->
     <div>
-        <form method="GET" action="{% url 'list_plants' %}">
+        <form id="search" method="GET" action="{% url 'carbon_capture' %}">
             <div class="input-group w-50">
                 <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
                 <div class="input-group-append">
