FEAT: Ensure LocationsPlants view only allows superusers

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -395,6 +395,14 @@ main {
     top: -75px;
 }
 
+.error-page-link {
+    color: black;
+}
+
+.error-page-link:hover {
+    color: black;
+    text-decoration: underline;
+}
 
 .contact-us-inner-container,
 .privacy-policy-inner-container {
