--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -5,4 +5,5 @@
 {% block content %}
     <div>Error: 404</div>
     <div>Sorry, this page was not found</div>
+    <a class="nav-link error-page-link" href="{% url 'home' %}">Home</a>
 {% endblock %}
