FEAT: Add location name to carbon capture page

--- a/locations/templates/locations/carbon_capture.html
+++ b/locations/templates/locations/carbon_capture.html
@@ -16,13 +16,11 @@
         <div class="page-title">
             <h1 class="page-title-main">Carbon Capture</h1>
             <h2 class="page-title-secondary">Commission the growing and planting of trees at our location in the west of Ireland</h2>
-            <!-- Image supplied by font awesome https://fontawesome.com/  -->
-            <img class="page-title-image" src="{% static 'static_media/images/home_index_seedling.svg' %}" alt="A seedling">
         </div>
     </div>
     <div class="content-container">
         <div class="inner-content-container">
-            <h2 class="content-header">Our Location</h2>
+            <h2 class="content-header">{{ location_name }}</h2>
             <p class="text-content location-text">
                 Located in the west of Ireland, our 80 acre site has the capacity for approximately 50000 trees! You choose the trees you want planted in you name and we will make sure it happens as soon as possible. 
 
