FEAT: Add plant description to plant detail template

--- a/plants/templates/plants/plant_detail.html
+++ b/plants/templates/plants/plant_detail.html
@@ -24,6 +24,7 @@
                 <div>{{ plant.common_name }}</div>
                 <span>{{ plant.genus }}</span>
                 <span>{{ plant.species }}</span>
+                <div>{{ plant.description }}</div>
                 <div>&#8364 {{ plant.price }}</div>
                 <div>{{ plant.sku }}</div>
             </div>
