FEAT: Add available plants header to carbon capture page

--- a/locations/templates/locations/carbon_capture.html
+++ b/locations/templates/locations/carbon_capture.html
@@ -30,6 +30,7 @@
             </p>
         </div>
     </div>
+    <h2>Available Plants</h2>
     <!-- Search box and sort box HTML supplied by Code Institute -->
     <div>
         <form id="search" method="GET" action="{% url 'carbon_capture' %}">
