FEAT: Update page titles

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,9 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block head_title %}
-    Rewild your way to carbon neutrality and beyond
-{% endblock %}
+{% block head_title %}Rewild your way to carbon neutrality and beyond{% endblock %}
 
 {% block main_style %}main-container-absolute{% endblock %}
 
