--- a/plants/templates/plants/edit_plant.html
+++ b/plants/templates/plants/edit_plant.html
@@ -1,9 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block head_title %}
-    Edit a plant
-{% endblock %}
+{% block head_title %}Edit a plant{% endblock %}
 
 {% block main_style %}main-container-offset{% endblock %}
 
