--- a/plants/templates/plants/list_plants.html
+++ b/plants/templates/plants/list_plants.html
@@ -1,9 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block head_title %}
-    plant list
-{% endblock %}
+{% block head_title %}plant list{% endblock %}
 {% block main_style %}main-container-offset{% endblock %}
 
 {% block description %}
