--- a/templates/errors/403.html
+++ b/templates/errors/403.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block head_title %}Error 403 Permission denied{% endblock %}
+
 {% block main_style %}main-container-offset{% endblock %}
 
 {% block content %}
