--- a/plants/templates/plants/confirm_plant_delete.html
+++ b/plants/templates/plants/confirm_plant_delete.html
@@ -1,9 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block head_title %}
-    Confirm deletion of a plant
-{% endblock %}
+{% block head_title %}Confirm deletion of a plant{% endblock %}
 
 {% block main_style %}main-container-offset{% endblock %}
 
