--- a/plants/templates/plants/plant_detail.html
+++ b/plants/templates/plants/plant_detail.html
@@ -1,9 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block head_title %}
-    Associate plants with a location
-{% endblock %}
+{% block head_title %}Associate plants with a location{% endblock %}
 
 {% block main_style %}main-container-offset{% endblock %}
 
