--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block head_title %}Error 404 Page not found{% endblock %}
+
 {% block main_style %}main-container-offset{% endblock %}
 
 {% block content %}
