--- a/templates/errors/500.html
+++ b/templates/errors/500.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block head_title %}Error 500 Server error{% endblock %}
+
 {% block main_style %}main-container-offset{% endblock %}
 
 {% block content %}
