FEAT: Add view_basket template and view

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -175,6 +175,10 @@ header {
     display: none;
 }
 
+.basket-icon {
+    height: 2.3rem;
+}
+
 header,
 footer {
     background-color: var(--header-footer-background-colour);
