--- a/plants/templates/plants/plant_detail.html
+++ b/plants/templates/plants/plant_detail.html
@@ -27,7 +27,7 @@
                 <div>{{ plant.sku }}</div>
             </div>
             <!-- Quantity selector template code provided by Code Institute -->
-            <!-- <form class="form" action="#" method="POST"> -->
+            <form class="form" action="{% url 'add_to_basket' plant.id %}" method="POST">
                 {% csrf_token %}
                 <div>
                     <p><strong>Quantity:</strong></p>
@@ -51,9 +51,9 @@
                         </div>
                     </div>
                     <input type="hidden" name="redirect_url" value="{{ request.path }}">
-                    <!-- <button type="submit" class="btn">Add To Basket</button> -->
+                    <button type="submit" class="btn">Add To Basket</button>
                 </div>
-            <!-- </form> -->
+            </form>
             <!-- End of quantity selector template code provided by Code Institute -->
             <a class="nav-link" href="{% url 'carbon_capture' %}">
                 <span>
