--- a/basket/templates/basket/view_basket.html
+++ b/basket/templates/basket/view_basket.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% load basket_tools %}
 
 {% block head_title %}Your Wild Carbon basket{% endblock %}
 
@@ -10,8 +11,116 @@
 {% endblock %}
 
 {% block content %}
-    
+    <div class="overlay"></div>
+    <div class="container mb-2">
+        <div class="row">
+            <div class="col">
+                <hr>
+                <h2 class="logo-font mb-4">Shopping Basket</h2>
+                <hr>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                {% if basket_items %}
+                    <div class="d-block d-md-none">
+                        <div class="row">
+                            <div class="col">
+                                {% include "basket/basket_total.html" %}
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                {% include "basket/checkout_buttons.html" %}
+                                <p class="text-muted mb-5">A summary of your basket contents is below</p>
+                            </div>
+                        </div>
+                        {% for item in basket_items %}
+                            <div class="row">
+                                <div class="col-12 col-sm-6 mb-2">
+                                    {% include "basket/plant_image.html" %}
+                                </div>
+                                <div class="col-12 col-sm-6 mb-2">
+                                    {% include "basket/plant_info.html" %}
+                                </div>
+                                <div class="col-12 col-sm-6 order-sm-last">
+                                    <p class="my-0">Price Each: ${{ item.plant.price }}</p>
+                                    <p><strong>Subtotal: </strong>${{ item.plant.price | calc_subtotal:item.quantity }}</p>
+                                </div>
+                                <div class="col-12 col-sm-6">
+                                    {% include "basket/quantity_form.html" %}
+                                </div>
+                            </div>
+                            <div class="row"><div class="col"><hr></div></div>
+                        {% endfor %}
+                        <div class="btt-button shadow-sm rounded-0 border border-black">
+                            <a class="btt-link d-flex h-100">
+                                <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
+                            </a>	
+                        </div>
+                    </div>
+                    <div class="table-responsive rounded d-none d-md-block">
+                        <table class="table table-sm table-borderless">
+                            <thead class="text-black">
+                                <tr>
+                                    <th scope="col">Plant Info</th>
+                                    <th scope="col"></th>
+                                    <th scope="col">Price</th>
+                                    <th scope="col">Qty</th>
+                                    <th scope="col">Subtotal</th>
+                                </tr>
+                            </thead>
+
+                            {% for item in basket_items %}
+                                <tr>
+                                    <td class="p-3 w-25">
+                                        {% include "basket/plant_image.html" %}
+                                    </td>
+                                    <td class="py-3">
+                                        {% include "basket/plant_info.html" %}
+                                    </td>
+                                    <td class="py-3">
+                                        <p class="my-0">${{ item.plant.price }}</p>
+                                    </td>
+                                    <td class="py-3 w-25">
+                                        {% include "basket/quantity_form_1.html" %}
+                                    </td>
+                                    <td class="py-3">
+                                        <p class="my-0">${{ item.plant.price | calc_subtotal:item.quantity }}</p>
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                            <tr>
+                                <td colspan="5" class="pt-5 text-right">
+                                    {% include "basket/basket_total.html" %}
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="5" class="text-right">
+                                    {% include "basket/checkout_buttons.html" %}
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                {% else %}
+                    <p class="lead mb-5">Your basket is empty.</p>
+                    <a href="{% url 'carbon_capture' %}" class="btn btn-outline-black rounded-0 btn-lg">
+                        <span class="icon">
+                            <i class="fas fa-chevron-left"></i>
+                        </span>
+                        <span class="text-uppercase">Keep Shopping</span>
+                    </a>
+                {% endif %}
+            </div>
+        </div>
+    </div>
 {% endblock %}
 
 {% block modal_style %}modal-offset{% endblock %}
 {% block privacy_modal_style %}modal-offset{% endblock %}
+
+{% block extra_js %}
+    <script src="{% static 'js/basket/view_basket.js' %}"></script>
+    <script src="{% static 'js/wild_carbon/quantity_input_script.js' %}"></script>
+{% endblock %}
