--- a/basket/templates/basket/quantity_form.html
+++ b/basket/templates/basket/quantity_form.html
@@ -1,29 +1,25 @@
 <form class="form update-form" method="POST" action="{% url 'adjust_basket' item.item_id %}">
-        {% csrf_token %}
-        <div>
-            <p><strong>Quantity:</strong></p>
-            <div>
-                <div id="input-group-1-{{ item.item_id }}" class="input-group">
-                    <div class="input-group-prepend">
-                        <button id="decrement-qty-1-{{ item.item_id }}" class="btn">
-                            <span class="icon">
-                                <i class="fas fa-minus"></i>
-                            </span>
-                        </button>
-                    </div>
-                    <input id="id-qty-1-{{ item.item_id }}" class="form-control" type="number" name="quantity" value="1" min="1" max="99">
-                    <div class="input-group-append">
-                        <button id="increment-qty-1-{{ item.item_id }}" class="btn">
-                            <span class="icon">
-                                <i class="fas fa-plus"></i>
-                            </span>
-                        </button>
-                    </div>
-                </div>
+    {% csrf_token %}
+    <div class="form-group">
+        <div class="input-group input-group-{{ item.item_id }}">
+            <div class="input-group-prepend">
+                <button class="decrement-qty btn btn-sm btn-black rounded-0 decrement-qty_{{ item.item_id }}" data-item_id="{{ item.item_id }}" data-size="{{ item.size }}">
+                    <span>
+                        <i class="fas fa-minus fa-sm"></i>
+                    </span>
+                </button>
             </div>
-            <input type="hidden" name="redirect_url" value="{{ request.path }}">
-            <button type="submit" class="btn">Add To Basket</button>
+            <input class="form-control form-control-sm qty_input id_qty_{{ item.item_id }}" type="number" name="quantity" value="{{ item.quantity }}" min="1" max="99"
+                data-item_id="{{ item.item_id }}">
+            <div class="input-group-append">
+                <button class="increment-qty btn btn-sm btn-black rounded-0 increment-qty_{{ item.item_id }}" data-item_id="{{ item.item_id }}">
+                    <span>
+                        <i class="fas fa-plus fa-sm"></i>
+                    </span>
+                </button>
+            </div>
         </div>
-    </form>
+    </div>
+</form>
 <a class="update-link text-info"><small>Update</small></a>
 <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}"><small>Remove</small></a>
