--- a/basket/templates/basket/view_basket.html
+++ b/basket/templates/basket/view_basket.html
@@ -54,11 +54,6 @@
                             </div>
                             <div class="row"><div class="col"><hr></div></div>
                         {% endfor %}
-                        <div class="btt-button shadow-sm rounded-0 border border-black">
-                            <a class="btt-link d-flex h-100">
-                                <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
-                            </a>	
-                        </div>
                     </div>
                     <div class="table-responsive rounded d-none d-md-block">
                         <table class="table table-sm table-borderless">
@@ -71,7 +66,6 @@
                                     <th scope="col">Subtotal</th>
                                 </tr>
                             </thead>
-
                             {% for item in basket_items %}
                                 <tr>
                                     <td class="p-3 w-25">
@@ -84,7 +78,7 @@
                                         <p class="my-0">${{ item.plant.price }}</p>
                                     </td>
                                     <td class="py-3 w-25">
-                                        {% include "basket/quantity_form_1.html" %}
+                                        {% include "basket/quantity_form.html" %}
                                     </td>
                                     <td class="py-3">
                                         <p class="my-0">${{ item.plant.price | calc_subtotal:item.quantity }}</p>
