FEAT: Move app specific static files into their apps

--- a/basket/templates/basket/view_basket.html
+++ b/basket/templates/basket/view_basket.html
@@ -114,6 +114,6 @@
 {% block privacy_modal_style %}modal-offset{% endblock %}
 
 {% block extra_js %}
-    <script src="{% static 'js/basket/view_basket.js' %}"></script>
+    <script src="{% static 'basket/js/view_basket.js' %}"></script>
     <script src="{% static 'js/wild_carbon/quantity_input_script.js' %}"></script>
 {% endblock %}
