FEAT: Update Wild Carbon urls

--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -202,7 +202,7 @@
                     </a>
                 {% else %}
                     <a href="{% url 'home' %}" class="btn btn-black rounded-0 my-2">
-                        <span class="icon mr-2">Home</span>
+                        <span class="icon mr-2">Done</span>
                     </a>
                 {% endif %}
 			</div>
