--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -59,7 +59,7 @@
                 <hr class="my-0">
                 <div class="row text-black text-right">
                     <div class="col-7 offset-2">
-                        <p class="my-0">Order Total:</p>
+                        <p class="my-0">Basket Total:</p>
                         <p class="my-0">Vat:</p>
                         <p class="my-0">Grand Total:</p>
                     </div>
