FEAT: Add profile urls to project urls.py

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -191,13 +191,13 @@ footer {
     position: absolute;
     top: 0;
     width: 100%;
-    min-height: 100vh;
     display: flex;
     flex-direction: column;
 }
 
 .main-container-offset {
     top: var(--header-height);
+    height: calc(100vh - 75px);
 }
 
 main {
